# spinmonitor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.cc  app.hh  build.sh  client.cc  client.hh  config.hh  daemon.cc  daemon.hh  disk.cc  disk.hh  main.cc  sata_disk.cc  sata_disk.hh  scsi_disk.cc  scsi_disk.hh  tools.cc  tools.hh
